force-app/main/default/objects/Data_Load_OOO_Tracking__c/Data_Load_OOO_Tracking__c.object-meta.xml
<CustomObject>
    <description>Data Load Order of Operation Tracking object.</description>
    <label>Data Load OOO Tracking</label>
    <nameField>
        <label>Data Load OOO Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Loads OOO Tracking</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>