force-app/main/default/objects/Data_Load_OOO_Tracking__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <label>Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E Parents</fullName>
            </value>
            <value>
                <fullName>Z Chain</fullName>
            </value>
            <value>
                <fullName>D Chain</fullName>
            </value>
            <value>
                <fullName>E Bill Tos</fullName>
            </value>
            <value>
                <fullName>D Bill Tos</fullName>
            </value>
            <value>
                <fullName>Z Bill Tos</fullName>
            </value>
            <value>
                <fullName>Z Contracts</fullName>
            </value>
            <value>
                <fullName>E Ship Tos</fullName>
            </value>
            <value>
                <fullName>D Ship Tos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>