force-app/main/default/objects/Data_Load_OOO_Tracking__c/fields/Step__c.field-meta.xml
<CustomField>
    <fullName>Step__c</fullName>
    <description>Step Number 1 - 9.
Corresponds to process</description>
    <label>Step</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>